      as '/') are now handled properly. (bug #587)

  o Server changes
    * Standalone server reports warnings for unsupported configuration options
      instead of exiting with a traceback.
    * Compatibility for repositoryDir has been removed.

  o Client changes
    * Compute sha1's for source checkins and local change set commits

  o Build changes
    * PythonSetup() now correctly requires python-setuptools:python
      instead of python-setuptools:runtime
    * Automatic python dependency provision now searches more directories
      to better support multilib python.
    * Conary now defaults to building in ~/.conary/builds instead of
      /var/tmp/conary/builds, and caching in ~/.conary/cache instead
      of /var/cache/conary

Changes in 0.92:
  o Package Building Changes:
    * Conary policy has been split out into the conary-policy package.
      (Some policy was left in conary proper; it is needed for
      internal packaging work.)
    * Conary prints out the name of each policy as it runs, making it
      possible to see which policies take the most time.
    * BuildLog files no longer contain lines that end with \r.
    * A new 'emergeUser' config item has been added.  Conary will
      change to this user when emerging packages as root.
    * --no-deps is now accepted by 'conary emerge'.

  o Group Building Changes:
    * A bug has been fixed in dependency checking when using
      autoResolve where deleted weak troves would be included in
      autoResolve and depChecks.

  o Client changes:
    * Conary can now rate limit uploads and downloads.  The rate limit
      is controlled by the "uploadRateLimit" and "downloadRateLimit"
      configuration variables, which is expressed in bytes per second.
      Also, Conary displays the transfer rate when uploading and
      downloading.  Thanks to Pavel Volkovitskiy for these features.
    * The client didn't write config files for merged changesets in